updated footnote title and footnote link wrap issue

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -451,3 +451,7 @@ sup > .footnote-ref::after {
   font-style: italic;
   margin-bottom: var(--gatsbySpacing-5);
 }
+
+.footnotes a {
+  word-break: break-all;
+}
